refactor(intro): optimize mobile ui/ux

--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
@@ -15,7 +15,7 @@
     </a>
 
     <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav mt-sm-0 mt-3 ml-auto">
         <li class="nav-item active">
           <a class="nav-link" href="#ecosystem">{{'intro-navbar.ecosystem' | translate}}</a>
         </li>
