--- a/projects/web/src/modules/intro/components/intro-team/mzk-intro-team.component.html
+++ b/projects/web/src/modules/intro/components/intro-team/mzk-intro-team.component.html
@@ -17,7 +17,7 @@
           </div>
           <div class="team-desc text-left mt-4">
             <h6 class="team-name text-custom mb-1">{{member.name}}</h6>
-            <p class="team-position text-muted">{{member.position}}</p>
+            <p class="team-position">{{member.position}}</p>
           </div>
         </div>
       </div>
