--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -24,7 +24,7 @@
               <a href="assets/mzk-whitepaper-en.pdf" target="_blank" class="btn btn-custom mr-1 mr-sm-3">English</a>
             </div>
 
-            <div class="home-btn mt-5" id="muzika-studio-program">
+            <div class="home-btn mt-4 mt-sm-5" id="muzika-studio-program">
               <h5>
                 Muzika Studio
                 <small>v0.0.9 (2018.07.23)</small>
