--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.scss
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.scss
@@ -103,7 +103,7 @@
 .navbar-custom {
   background: #192538;
   padding: 5px 0;
-  width: 100vw;
+  width: 100%;
   border-radius: 0;
   z-index: 999;
   margin-bottom: 0;
