--- a/projects/web/src/modules/intro/components/intro-roadmap/mzk-intro-roadmap.component.scss
+++ b/projects/web/src/modules/intro/components/intro-roadmap/mzk-intro-roadmap.component.scss
@@ -95,8 +95,7 @@
 
 @media (max-width: 768px) {
   .vertical-timeline {
-    border-left-color: transparent;
-    margin-left: 0;
+    margin-left: 10px;
   }
 
   .roadmap-box {
@@ -107,13 +106,17 @@
       margin-top: 30px;
     }
 
-    .circle, .horizontal-line {
+    .circle {
+      margin-top: 14px;
+    }
+
+    .horizontal-line {
       display: none;
     }
 
     .info-box {
-      width: 100%;
-      margin-left: 0 !important;
+      width: 91%;
+      margin-left: 9% !important;
     }
   }
 }
@@ -135,7 +138,7 @@
 
 @media(max-width: 738px) {
   .spinner {
-    display: none;
+    margin-top: 1px;
   }
 }
 
