refactor(intro-main): mobile optimization

--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.scss
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.scss
@@ -101,6 +101,12 @@
   background-size: 800px;
 }
 
+@media(max-width: 738px) {
+  .home-desc-center {
+    background: none;
+  }
+}
+
 /deep/ canvas {
   position: absolute;
   left: 0;
