refactor(intro): add github & fix-up translation

--- a/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.scss
+++ b/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.scss
@@ -29,6 +29,13 @@
   .leader-name {
     font-size: 16px;
     color: #343c4d;
+
+    a {
+      color: #343c4d;
+      &:hover {
+        text-decoration: none;
+      }
+    }
   }
 
   .position {
