--- a/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
+++ b/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
@@ -25,6 +25,7 @@
             <div class="col-xs-6 pt-5 pl-4">
               <h6 class="mb-0 leader-name">
                 {{leader.name}}
+                <a class="fab fa-github" *ngIf="leader.github" [attr.href]="leader.github" target="_blank"></a>
               </h6>
               <div class="position mt-1">
                 {{leader.position}} & {{'intro-leadership.co-founders' | translate}}
