--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
@@ -5,8 +5,21 @@
       <span>Muzika</span>
     </a>
 
-    <div class="mobile-only">
-      <i class="icon-lang" [ngClass]="lang"></i>
+    <div class="mobile-only dropdown">
+      <div class="dropdown-toggle" id="dropdownMenuMobileButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <i class="icon-lang" [ngClass]="lang"></i>
+      </div>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuMobileButton">
+        <a class="dropdown-item" [class.active]="lang === 'en'" (click)="changeLang('en')">
+          <span class="icon-lang en"></span>
+        </a>
+        <a class="dropdown-item" [class.active]="lang === 'zh'" (click)="changeLang('zh')">
+          <span class="icon-lang zh"></span>
+        </a>
+        <a class="dropdown-item" [class.active]="lang === 'ko'" (click)="changeLang('ko')">
+          <span class="icon-lang ko"></span>
+        </a>
+      </div>
     </div>
 
     <a class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse"
