refactor(intro-navbar): support moveToTop action on logo click event

--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.scss
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.scss
@@ -11,6 +11,10 @@
   color: white;
   vertical-align: middle;
 
+  &:hover {
+    color: white;
+  }
+
   brand-icon-muzika {
     display: block;
     float: left;
