refactor(intro-navbar): change color set

--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.scss
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.scss
@@ -8,11 +8,11 @@
 .navbar-brand {
   outline: none;
   cursor: pointer;
-  color: white;
+  color: #192538;
   vertical-align: middle;
 
   &:hover {
-    color: white;
+    color: #192538;
   }
 
   brand-icon-muzika {
