--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -29,13 +29,13 @@
                 Muzika Studio
                 <small>v0.0.9 (2018.07.23)</small>
               </h5>
-              <div class="mr-3 mr-sm-3 mb-3">
+              <div class="mr-3 mr-sm-3 mb-3" *ngIf="macDownloadURL">
                 <span class="fa-stack fa-2x">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-apple fa-stack-1x fa-inverse"></i>
                 </span>
                 <span class="title"> Mac </span>
-                <a href="http://muzika-release.s3-website-us-west-2.amazonaws.com/0.0.9/muzika.dmg"
+                <a [attr.href]="macDownloadURL"
                    target="_blank" class="download">Download</a>
               </div>
               <div class="mr-3 mr-sm-3 mb-3">
