--- a/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
+++ b/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
@@ -25,6 +25,7 @@
             <div class="col-xs-6 pt-5 pl-4">
               <h6 class="mb-0 leader-name">
                 {{leader.name}}
+                <a class="fab fa-facebook" *ngIf="leader.facebook" [attr.href]="leader.facebook" target="_blank"></a>
                 <a class="fab fa-github" *ngIf="leader.github" [attr.href]="leader.github" target="_blank"></a>
                 <a class="fab fa-linkedin" *ngIf="leader.linkedin" [attr.href]="leader.linkedin" target="_blank"></a>
               </h6>
