fix(studio): change color of login button and username in navbar

--- a/projects/studio-renderer/src/components/navbar/navbar.component.scss
+++ b/projects/studio-renderer/src/components/navbar/navbar.component.scss
@@ -26,7 +26,7 @@ nav:after {
 
 .btn-login {
   display: block;
-  color: white;
+  color: black;
 }
 
 .user-profile-img {
@@ -69,7 +69,7 @@ nav:after {
 //}
 
 .user-name {
-  color: #fff;
+  color: black;
 }
 
 .wallet {
