--- a/projects/studio-renderer/src/components/navbar/navbar.component.html
+++ b/projects/studio-renderer/src/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="pl-3">
-        <a class="text-white" style="cursor: pointer" (click)="logout()">
+        <a class="text-black" style="cursor: pointer" (click)="logout()">
           <i class="fa fa-sign-out"></i>
         </a>
       </div>
