--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -29,7 +29,7 @@
                 Muzika Studio
                 <small>v0.0.9 (2018.07.23)</small>
               </h5>
-              <div class="mr-3 mr-sm-3 mb-3" *ngIf="macDownloadURL">
+              <div class="mr-3 mr-sm-3 mb-3">
                 <span class="fa-stack fa-2x">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-apple fa-stack-1x fa-inverse"></i>
@@ -44,7 +44,7 @@
                   <i class="fab fa-windows fa-stack-1x fa-inverse"></i>
                 </span>
                 <span class="title"> Windows </span>
-                <a href="http://muzika-release.s3-website-us-west-2.amazonaws.com/0.0.9/muzika.exe"
+                <a [attr.href]="winDownloadURL"
                    target="_blank" class="download">Download</a>
               </div>
               <div class="mr-3 mr-sm-3 mb-3">
@@ -53,7 +53,7 @@
                   <i class="fab fa-linux fa-stack-1x fa-inverse"></i>
                 </span>
                 <span class="title"> Linux </span>
-                <a href="http://muzika-release.s3-website-us-west-2.amazonaws.com/0.0.9/muzika-0.0.9-x86_64.AppImage"
+                <a [attr.href]="linuxDownloadURL"
                    target="_blank" class="download">Download</a>
               </div>
             </div>
