fix(ios): fix-up navbar dropdown menu in iOS website

--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
@@ -5,11 +5,11 @@
       <span>Muzika</span>
     </a>
 
-    <div class="mobile-only dropdown">
-      <div class="dropdown-toggle" id="dropdownMenuMobileButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <div class="mobile-only" dropdown>
+      <div class="dropdown-toggle" dropdownToggle id="dropdownMenuMobileButton" aria-haspopup="true" aria-expanded="false">
         <i class="icon-lang" [ngClass]="lang"></i>
       </div>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuMobileButton">
+      <div class="dropdown-menu" *dropdownMenu aria-labelledby="dropdownMenuMobileButton">
         <a class="dropdown-item" [class.active]="lang === 'en'" (click)="changeLang('en')">
           <span class="icon-lang en"></span>
         </a>
@@ -55,8 +55,8 @@
           <a class="nav-link" routerLink="/beta">{{'intro-navbar.services' | translate}}</a>
         </li>
 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+        <li class="nav-item" dropdown>
+          <a class="nav-link dropdown-toggle" dropdownToggle id="dropdownMenuButton" aria-haspopup="true"
              aria-expanded="false">
             <i class="icon-lang" [ngClass]="lang"></i>
             <ng-container *ngIf="lang === 'en'">
@@ -69,7 +69,7 @@
               한국어
             </ng-container>
           </a>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <div class="dropdown-menu" *dropdownMenu aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" [class.active]="lang === 'en'" (click)="changeLang('en')">English</a>
             <a class="dropdown-item" [class.active]="lang === 'zh'" (click)="changeLang('zh')">中文</a>
             <a class="dropdown-item" [class.active]="lang === 'ko'" (click)="changeLang('ko')">한국어</a>
