--- a/projects/intro/src/modules/intro/components/intro-team/mzk-intro-team.component.scss
+++ b/projects/intro/src/modules/intro/components/intro-team/mzk-intro-team.component.scss
@@ -62,5 +62,14 @@ h2 {
     .team-desc {
       padding-left: 0;
     }
+
+    .team-position, .team-desc, .team-name, a {
+      text-align: center;
+    }
+
+    a.fab {
+      display: block;
+      margin-top: 5px;
+    }
   }
 }
