--- a/projects/intro/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/intro/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -15,8 +15,8 @@
             </p>
             <div class="home-btn">
               <a class="mr-2 mr-sm-3">{{'intro-main.project-teaser' | translate}}</a>
-              <a href="assets/mzk-teaser-en.pdf" target="_blank" class="btn btn-custom mr-1 mr-sm-3">English</a>
-              <a href="assets/mzk-teaser-kr.pdf" target="_blank" class="btn btn-custom mr-1 mr-sm-3">한국어</a>
+              <a href="assets/mzk-teaser-en.pdf" target="_blank" class="btn btn-custom mr-3">English</a>
+              <a href="assets/mzk-teaser-kr.pdf" target="_blank" class="btn btn-custom mr-3">한국어</a>
               <a href="assets/mzk-teaser-ch.pdf" target="_blank" class="btn btn-custom">中國語</a>
             </div>
             <div class="home-btn mt-3">
