--- a/projects/intro/src/styles.scss
+++ b/projects/intro/src/styles.scss
@@ -41,6 +41,7 @@ $border-radius-sm: 2px;
 }
 
 html, body {
+  min-height: 100%;
   background-color: $background-color;
   font-family: 'Roboto', 'Noto Sans KR', sans-serif;
 }
