--- a/projects/intro/src/modules/airdrop/page/event/event.component.scss
+++ b/projects/intro/src/modules/airdrop/page/event/event.component.scss
@@ -1,8 +1,11 @@
 :host {
   display: block;
-  height: 100vh;
   background: #192538;
-  padding-top: 50px;
+  padding: 50px 0;
+}
+
+.container {
+  position: relative;
 }
 
 h3, p {
@@ -15,4 +18,17 @@ h3 {
 
 p {
   color: #8196b2;
+}
+
+@media(max-width: 738px) {
+  h3 {
+    font-size: 20px;
+  }
+  p {
+    font-size: 14px;
+  }
+}
+
+p.small {
+  color: #8196b2 !important;
 }
