feat(intro-footer): add airdrop-event btn

--- a/projects/intro/src/modules/intro/components/intro-footer/intro-footer.component.html
+++ b/projects/intro/src/modules/intro/components/intro-footer/intro-footer.component.html
@@ -13,6 +13,7 @@
           <li class="mb-2"><a href="#teams">{{'intro-footer.teams' | translate}}</a></li>
           <li class="mb-2"><a href="#roadmap">{{'intro-footer.roadmap' | translate}}</a></li>
           <li class="mb-2"><a routerLink="/beta">{{'intro-footer.services' | translate}}</a></li>
+          <li class="mb-2"><a routerLink="/airdrop-event">Airdrop (Comming soon)</a></li>
         </ul>
       </div>
       <div class="col pl-sm-4">
