--- a/projects/intro/src/modules/airdrop/page/event/event.component.scss
+++ b/projects/intro/src/modules/airdrop/page/event/event.component.scss
@@ -4,6 +4,13 @@
   padding: 50px 0;
 }
 
+/deep/ app-intro-navbar nav {
+  background: white !important;
+  ul li.nav-item a {
+    color: black !important;
+  }
+}
+
 .container {
   position: relative;
 }
