--- a/projects/intro/src/modules/airdrop/component/content-comment/content-comment.component.scss
+++ b/projects/intro/src/modules/airdrop/component/content-comment/content-comment.component.scss
@@ -17,3 +17,63 @@
     box-shadow: 0 3px 8px 0 #2f9db4;
   }
 }
+
+
+
+.comment {
+  position: relative;
+  margin-top: 25px;
+
+  &.active {
+    animation-duration: 1.5s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+    animation-name: commentSectionActive;
+    animation-timing-function: linear;
+  }
+
+  .profile-img {
+    position: absolute;
+    left: 8px;
+    top: 3px;
+    border-radius: 20px 20px;
+    width: 38px;
+    height: 38px;
+    float: left;
+    margin-right: 10px;
+  }
+
+  .content {
+    margin-top: 10px;
+    margin-left: 55px;
+    word-break: break-all;
+  }
+
+  .like-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    min-width: 39px;
+    height: 39px;
+    margin: 0 3px 3px;
+    border: 1px solid #EEE;
+    border-radius: 6px;
+    text-align: center;
+    padding: 0;
+    cursor: pointer;
+    color: #4e4e4e;
+
+    i {
+      margin-right: 3px;
+    }
+
+    &.active {
+      border-color: #f56400;
+      color: #f56400;
+    }
+    &:hover {
+      text-decoration: none;
+    }
+  }
+}
