--- a/projects/intro/src/modules/airdrop/component/content-exchange/content-exchange.component.scss
+++ b/projects/intro/src/modules/airdrop/component/content-exchange/content-exchange.component.scss
@@ -1,3 +1,9 @@
+@media(max-width: 738px) {
+  :host {
+    font-size: 14px;
+  }
+}
+
 .exchange-bar {
   display: block;
   background: #f2f2f2;
@@ -41,6 +47,14 @@
   margin-top: 18px;
 }
 
+@media (max-width: 738px) {
+  ul {
+    margin-left: 8px;
+    padding-right: 15px;
+    padding-left: 25px;
+  }
+}
+
 .receive-code {
   border-radius: 8px 8px;
   font-size: 16px;
@@ -56,5 +70,4 @@
     max-width: 500px;
     border-radius: 20px 20px;
   }
-
 }
