fix(intro): remove experimental code from countdown

--- a/projects/intro/src/modules/intro/components/intro-countdown/intro-countdown-number.component.html
+++ b/projects/intro/src/modules/intro/components/intro-countdown/intro-countdown-number.component.html
@@ -1,4 +1,4 @@
-<div class="countdown-number" [class.animate]="animate" (click)="doAnimate()">
+<div class="countdown-number" [class.animate]="animate">
   <div class="before">
     <div class="up">
       <div class="animate-shadow"></div>
