--- a/projects/intro/src/modules/airdrop/component/content-exchange/content-exchange.component.scss
+++ b/projects/intro/src/modules/airdrop/component/content-exchange/content-exchange.component.scss
@@ -55,6 +55,12 @@
   }
 }
 
+.instruction {
+  li {
+    display: none;
+  }
+}
+
 .receive-code {
   border-radius: 8px 8px;
   font-size: 16px;
@@ -64,10 +70,31 @@
 }
 
 .receive-box {
-  .form-control {
-    background: rgb(250, 250, 250);
+  display: none;
+
+  &.one {
+    background: #f1f1f1;
+    padding: 30px 0;
+    border-radius: 20px 20px;
+  }
+
+  .input-group {
     margin: 0 auto;
     max-width: 500px;
-    border-radius: 20px 20px;
+
+    .form-control {
+      background: rgb(250, 250, 250);
+      border: none;
+      border-top-left-radius: 20px;
+      border-bottom-left-radius: 20px;
+    }
+
+    .btn {
+      background: #76dbc7;
+      color: white;
+      padding-right: 15px;
+      border-top-right-radius: 20px;
+      border-bottom-right-radius: 20px;
+    }
   }
 }
