refactor(content-exchange): finish all api connection

--- a/projects/intro/src/modules/airdrop/component/content-exchange/content-exchange.component.scss
+++ b/projects/intro/src/modules/airdrop/component/content-exchange/content-exchange.component.scss
@@ -93,6 +93,9 @@
       background: #76dbc7;
       color: white;
       padding-right: 15px;
+    }
+
+    :last-child {
       border-top-right-radius: 20px;
       border-bottom-right-radius: 20px;
     }
