--- a/projects/intro/src/modules/airdrop/component/my-wallet/my-wallet.component.scss
+++ b/projects/intro/src/modules/airdrop/component/my-wallet/my-wallet.component.scss
@@ -7,6 +7,38 @@
   border-radius: 15px 15px;
   width: 150px;
   padding: 15px;
+
+  @media(max-width: 738px) {
+    position: fixed;
+    bottom: 0;
+    top: auto;
+    right: auto;
+    left: 0;
+    width: 100%;
+    z-index: 999;
+    border-radius: 0 0;
+    border-top: 2px solid #192538;
+
+    padding: 4px 28px;
+
+    h5 {
+      text-align: left;
+    }
+
+    p {
+      text-align: right;
+    }
+
+    h5, p {
+      font-size: 13px;
+      display: inline-block;
+      width: 33%;
+
+      .loyaltyPoint, .mzk {
+        padding: 0 8px;
+      }
+    }
+  }
 }
 
 h5 {
