--- a/projects/intro/src/modules/airdrop/page/event/event.component.scss
+++ b/projects/intro/src/modules/airdrop/page/event/event.component.scss
@@ -5,6 +5,10 @@
   background: #192538;
   padding: 50px 0;
   font-family: 'Nanum Square', 'NanumSquare', sans-serif !important;
+
+  @media (max-width: 738px) {
+    padding-bottom: 100px;
+  }
 }
 
 /deep/ app-intro-navbar nav {
