feat(intro): add bounty program button and telegram button for chinese

--- a/projects/intro/src/modules/intro/components/intro-footer/intro-footer.component.html
+++ b/projects/intro/src/modules/intro/components/intro-footer/intro-footer.component.html
@@ -13,7 +13,6 @@
           <li class="mb-2"><a href="#teams">{{'intro-footer.teams' | translate}}</a></li>
           <li class="mb-2"><a href="#roadmap">{{'intro-footer.roadmap' | translate}}</a></li>
           <li class="mb-2"><a routerLink="/beta">{{'intro-footer.services' | translate}}</a></li>
-          <li class="mb-2"><a routerLink="/airdrop-event">Airdrop (Comming soon)</a></li>
         </ul>
       </div>
       <div class="col pl-sm-4">
@@ -21,8 +20,9 @@
         <ul class="mb-4 text-center">
           <li class="mb-2"><a href="https://medium.com/muzika-official" target="_blank"><i class="fab fa-medium"></i> {{'intro-footer.medium' | translate}}</a></li>
           <li class="mb-2"><a href="https://twitter.com/muzika_official" target="_blank"><i class="fab fa-twitter"></i> {{'intro-footer.twitter' | translate}}</a></li>
-          <li class="mb-2"><a href="https://t.me/muzika_english"><i class="fab fa-telegram"></i> {{'intro-footer.telegram' | translate}}</a></li>
-          <!--<li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-telegram"></i> {{'intro-footer.telegram-kr' | translate}}</a></li>-->
+          <li class="mb-2"><a href="https://t.me/muzika_english"><i class="fab fa-telegram"></i> {{'intro-footer.telegram-en' | translate}}</a></li>
+          <li class="mb-2"><a href="https://t.me/muzika_chinese"><i class="fab fa-telegram"></i> {{'intro-footer.telegram-zh' | translate}}</a></li>
+          <li class="mb-2"><a href="https://t.me/muzika_korean"><i class="fab fa-telegram"></i> {{'intro-footer.telegram-kr' | translate}}</a></li>
           <li class="mb-2"><a href="https://github.com/MuzikaFoundation" target="_blank"><i class="fab fa-github"></i> Github</a></li>
         </ul>
       </div>
