--- a/projects/intro/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/intro/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -65,6 +65,17 @@
               <!--<iframe width="530" height="315" src="//www.youtube.com/embed/Df2JgpM9zQA?rel=0&hd=1" frameborder="0"-->
               <!--allowfullscreen></iframe>-->
             </div>
+
+            <div class="airdrop-btn mt-3 text-right">
+              <a href="assets/mzk-teaser-ch.pdf" target="_blank" class="btn btn-custom">
+                {{'intro-main.airdrop-btn-text' | translate}}
+                <span class="next-arrows">
+                  <i class="fa fa-angle-right"></i>
+                  <i class="fa fa-angle-right"></i>
+                  <i class="fa fa-angle-right"></i>
+                </span>
+              </a>
+            </div>
           </div>
         </div>
       </div>
