--- a/projects/intro/src/modules/intro/pages/intro-main/intro-main.component.scss
+++ b/projects/intro/src/modules/intro/pages/intro-main/intro-main.component.scss
@@ -130,6 +130,123 @@
   border-radius: 10px 10px;
 }
 
+.airdrop-btn {
+  font-size: 16px;
+
+  > a:first-child {
+    display: inline-block;
+    color: white;
+    min-width: 115px;
+  }
+
+  .btn-custom { // English, 한국어, 중국어 버튼
+    background: linear-gradient(to right, #f15a24, #f7931e);
+    border: none;
+    color: white;
+    padding: 0 -1px;
+    font-size: 16px;
+    min-width: 120px;
+    border-radius: 20px 20px;
+
+    .next-arrows {
+      margin-left: 6px;
+
+      i.fa {
+        font-weight: normal;
+
+        &:first-child {
+          animation: airdrop-arrow-animation 3s .3s infinite ease-out;
+        }
+
+        &:nth-child(2) {
+          animation: airdrop-arrow-animation 3s .15s infinite ease-out;
+        }
+
+        &:nth-child(3) {
+          animation: airdrop-arrow-animation 3s infinite ease-out;
+        }
+      }
+    }
+
+    &:hover {
+      .next-arrows {
+        i.fa {
+
+          &:first-child {
+            animation: airdrop-arrow-animation-hover 1.5s .3s infinite ease-out;
+          }
+
+          &:nth-child(2) {
+            animation: airdrop-arrow-animation-hover 1.5s .15s infinite ease-out;
+          }
+
+          &:nth-child(3) {
+            animation: airdrop-arrow-animation-hover 1.5s infinite ease-out;
+          }
+        }
+      }
+    }
+  }
+
+  @media (max-width: 768px) {
+    & {
+      font-size: 14px;
+      > a:first-child {
+        display: block;
+        margin-bottom: 10px;
+
+        div.small {
+          display: inline-block;
+        }
+      }
+
+      .btn-custom {
+        font-size: 13px !important;
+        min-width: 80px;
+        padding: 7px 10px;
+      }
+    }
+  }
+
+  @keyframes airdrop-arrow-animation {
+    0% {
+      color: rgba(255, 255, 255, 1);
+      transform: translateX(0);
+    }
+    10% {
+      color: rgba(255, 255, 255, 0);
+      transform: translateX(9px);
+    }
+    30% {
+      color: rgba(255, 255, 255, 0);
+      transform: translateX(-9px);
+    }
+    40% {
+      color: rgba(255, 255, 255, 1);
+      transform: translateX(0);
+    }
+  }
+
+  @keyframes airdrop-arrow-animation-hover {
+    0% {
+      color: rgba(255, 255, 255, 1);
+      transform: translateX(0);
+    }
+    20% {
+      color: rgba(255, 255, 255, 0);
+      transform: translateX(9px);
+    }
+    50% {
+      color: rgba(255, 255, 255, 0);
+      transform: translateX(-9px);
+    }
+    70% {
+      color: rgba(255, 255, 255, 1);
+      transform: translateX(0);
+    }
+  }
+}
+
 .btn {
   padding: 8px 16px;
   font-size: 12px;
