fix(airdrop): fix url airdrop-event

--- a/projects/intro/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/intro/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -67,7 +67,7 @@
             </div>
 
             <div class="airdrop-btn mt-3 text-right">
-              <a href="assets/mzk-teaser-ch.pdf" target="_blank" class="btn btn-custom">
+              <a routerLink="/airdrop-event" class="btn btn-custom">
                 {{'intro-main.airdrop-btn-text' | translate}}
                 <span class="next-arrows">
                   <i class="fa fa-angle-right"></i>
