hotfix(translation): support en with ui

--- a/projects/intro/src/modules/airdrop/component/content-subscribe/content-subscribe.component.scss
+++ b/projects/intro/src/modules/airdrop/component/content-subscribe/content-subscribe.component.scss
@@ -41,8 +41,12 @@ $artist-list-width: 600px;
     border: 1px solid #76dbc7;
     color: #76dbc7;
     font-weight: 600;
-    width: $artist-list-width / 5 - 40px;
+    min-width: $artist-list-width / 5 - 40px;
     margin: 10px auto;
+
+    @media (max-width: 738px) {
+      font-size: 15px;
+    }
 
     &:hover {
       background: #76dbc7;
