fix(intro): fix chinese word breaking

--- a/projects/intro/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.scss
+++ b/projects/intro/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.scss
@@ -7,6 +7,10 @@
   color: white;
 }
 
+.intro-section-subtitle {
+  word-break: keep-all;
+}
+
 .testimonial-client-img {
   position: absolute;
   top: -67px;
