fix(intro): show message after countdown is end

--- a/projects/intro/src/modules/intro/components/intro-countdown/intro-countdown.component.html
+++ b/projects/intro/src/modules/intro/components/intro-countdown/intro-countdown.component.html
@@ -1,38 +1,47 @@
 <div class="date">
-  <div class="mobile-only">
-    <div class="row daysHoursText">
-      <div class="col-6"> DAYS </div>
-      <div class="col-6"> HOURS </div>
-    </div>
-    <div class="row daysHours">
-      <div class="col-6 days">
-        {{daysLeft}}
+  <ng-container *ngIf="!isExpired">
+    <div class="mobile-only">
+      <div class="row daysHoursText">
+        <div class="col-6"> DAYS </div>
+        <div class="col-6"> HOURS </div>
       </div>
-      <div class="col-6 hours">
-        {{hoursLeft}}
+      <div class="row daysHours">
+        <div class="col-6 days">
+          {{daysLeft}}
+        </div>
+        <div class="col-6 hours">
+          {{hoursLeft}}
+        </div>
       </div>
-    </div>
-    <div class="clock">
-      {{minutesLeft | number:'2.0-0'}}m {{secondsLeft | number:'2.0-0'}}s Left
-    </div>
-  </div>
-  <div class="desktop-only">
-    <div class="row daysHoursText">
-      <div class="col-6"> DAYS </div>
-      <div class="col-6"> HOURS </div>
-    </div>
-    <div class="row daysHours">
-      <div class="col-6 days">
-        <mzk-intro-countdown-number [num]="daysLeft / 10"></mzk-intro-countdown-number>
-        <mzk-intro-countdown-number [num]="daysLeft % 10"></mzk-intro-countdown-number>
-      </div>
-      <div class="col-6 hours">
-        <mzk-intro-countdown-number [num]="hoursLeft / 10"></mzk-intro-countdown-number>
-        <mzk-intro-countdown-number [num]="hoursLeft % 10"></mzk-intro-countdown-number>
+      <div class="clock">
+        {{minutesLeft | number:'2.0-0'}}m {{secondsLeft | number:'2.0-0'}}s Left
       </div>
     </div>
-    <div class="clock">
-      {{minutesLeft | number:'2.0-0'}}m {{secondsLeft | number:'2.0-0'}}s Left
+    <div class="desktop-only">
+      <div class="row daysHoursText">
+        <div class="col-6"> DAYS </div>
+        <div class="col-6"> HOURS </div>
+      </div>
+      <div class="row daysHours">
+        <div class="col-6 days">
+          <mzk-intro-countdown-number [num]="daysLeft / 10"></mzk-intro-countdown-number>
+          <mzk-intro-countdown-number [num]="daysLeft % 10"></mzk-intro-countdown-number>
+        </div>
+        <div class="col-6 hours">
+          <mzk-intro-countdown-number [num]="hoursLeft / 10"></mzk-intro-countdown-number>
+          <mzk-intro-countdown-number [num]="hoursLeft % 10"></mzk-intro-countdown-number>
+        </div>
+      </div>
+      <div class="clock">
+        {{minutesLeft | number:'2.0-0'}}m {{secondsLeft | number:'2.0-0'}}s Left
+      </div>
     </div>
-  </div>
+  </ng-container>
+  <ng-container *ngIf="isExpired">
+    <div class="d-table h-100 w-100">
+      <div class="d-table-cell" style="vertical-align: middle">
+        <h5 class="m-0"> Comming <br> Soon </h5>
+      </div>
+    </div>
+  </ng-container>
 </div>
