--- a/projects/studio-renderer/src/app/app.component.html
+++ b/projects/studio-renderer/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-container h-100" [(ngClass)]="currentTab">
-  <!--<app-navbar></app-navbar>-->
+  <app-navbar *ngIf="!renderOptions.hideNavBar"></app-navbar>
 
   <div class="main-content">
     <router-outlet></router-outlet>
