feat(titlebar): add title bar

--- a/projects/studio-renderer/src/theme/_variables.scss
+++ b/projects/studio-renderer/src/theme/_variables.scss
@@ -56,6 +56,12 @@ $navbar-text-color: mat-color($primary-palette, 700);
 // $navbar-height: 75px;
 $navbar-brand-size: 38px;
 
+/**
+ * TitleBar Configuration
+ */
+$titlebar-background: #2e2c29;
+$titlebar-height: 32px;
+
 //$brand-color-1: #414951;
 $brand-color-1: #ffffff;
 //$brand-color-2: #6c757d;
