--- a/projects/studio-renderer/src/app/app.component.html
+++ b/projects/studio-renderer/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="app-container h-100" [(ngClass)]="currentTab">
+  <app-titlebar *ngIf="!renderOptions.hideTitleBar"></app-titlebar>
   <app-navbar *ngIf="!renderOptions.hideNavBar"></app-navbar>
 
   <div class="main-content">
