feat: support other platform rendering (like win32 rendering in mac os)

--- a/projects/studio-renderer/src/components/titlebar/titlebar.component.scss
+++ b/projects/studio-renderer/src/components/titlebar/titlebar.component.scss
@@ -18,6 +18,8 @@
     padding-left: 12px;
     font-size: 12px;
     vertical-align: middle;
+    cursor: default;
+    user-select: none;
   }
 
   .btns {
