--- a/projects/studio-renderer/src/theme/_variables.scss
+++ b/projects/studio-renderer/src/theme/_variables.scss
@@ -60,7 +60,8 @@ $navbar-brand-size: 38px;
  * TitleBar Configuration
  */
 $titlebar-background: #2e2c29;
-$titlebar-height: 32px;
+$default-titlebar-height: 32px;
+$mac-titlebar-height: 24px;
 
 //$brand-color-1: #414951;
 $brand-color-1: #ffffff;
