fix(titlebar): show hidden transparent titlebar in mac os

--- a/projects/studio-renderer/src/components/titlebar/titlebar.component.scss
+++ b/projects/studio-renderer/src/components/titlebar/titlebar.component.scss
@@ -47,6 +47,11 @@
 
 .titlebar-mac {
   height: $mac-titlebar-height;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 10;
+  background: transparent;
 
   .title {
     height: $mac-titlebar-height;
