--- a/projects/studio-renderer/src/components/navbar/navbar.component.html
+++ b/projects/studio-renderer/src/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand">
   <div class="container-fluid">
-    <muzika-apps></muzika-apps>
+    <!--<muzika-apps></muzika-apps>-->
 
     <ng-container *ngIf="currentUser; else loggedInBlock">
       <div class="ml-auto" routerLink="/settings">
