--- a/projects/studio-renderer/src/theme/_variables.scss
+++ b/projects/studio-renderer/src/theme/_variables.scss
@@ -63,6 +63,11 @@ $titlebar-background: #2e2c29;
 $default-titlebar-height: 32px;
 $mac-titlebar-height: 24px;
 
+/**
+ * SideBar Configuration
+ */
+$sidebar-width: 70px;
+
 //$brand-color-1: #414951;
 $brand-color-1: #ffffff;
 //$brand-color-2: #6c757d;
