--- a/projects/studio-renderer/src/pages/main/main.component.html
+++ b/projects/studio-renderer/src/pages/main/main.component.html
@@ -1,6 +1,15 @@
 <div class="">
   <div class="container px-0">
     <div class="row">
+      <div class="col text-center own-coin">
+        <span>{{balances.mzk | number}} <small>MZK</small></span>
+      </div>
+      <div class="col text-center own-coin">
+        <span>{{balances.dollar | number}} <small>LP</small></span>
+      </div>
+    </div>
+
+    <div class="row">
       <div class="col-lg-9">
 
         <!--
