refactor(intro): typo fix

--- a/projects/intro/src/modules/intro/components/intro-countdown/intro-countdown.component.html
+++ b/projects/intro/src/modules/intro/components/intro-countdown/intro-countdown.component.html
@@ -40,7 +40,7 @@
   <ng-container *ngIf="isExpired">
     <div class="d-table h-100 w-100">
       <div class="d-table-cell" style="vertical-align: middle">
-        <h5 class="m-0"> Comming <br> Soon </h5>
+        <h5 class="m-0"> Coming <br> Soon </h5>
       </div>
     </div>
   </ng-container>
