refactor(post): support wallet / post ui with new design

--- a/projects/studio-renderer/src/components/sidebar/sidebar.component.html
+++ b/projects/studio-renderer/src/components/sidebar/sidebar.component.html
@@ -3,11 +3,11 @@
   </a>
     <div class="item" [class.active]="currentTab === 'wallet'" (click)="changeTab('wallet')">
       <a routerLink="/"><i class="fas fa-wallet"></i></a>
-      <span class="item-text">wallet</span>
+      <span class="item-text">Wallet</span>
     </div>
 
     <div class="item" [class.active]="currentTab === 'upload'" (click)="changeTab('upload')">
-      <a link="#"><i class="fas fa-cloud-upload-alt"></i></a>
-      <span class="item-text">upload</span>
+      <a routerLink="/board/sheet/write"><i class="fas fa-bezier-curve"></i></a>
+      <span class="item-text">Studio</span>
     </div>
 </div>
