refactor: change jQuery binding, change select call pattern

--- a/projects/studio-renderer/src/modules/post/pages/post-write/sheet/post-sheet-write.component.html
+++ b/projects/studio-renderer/src/modules/post/pages/post-write/sheet/post-sheet-write.component.html
@@ -109,7 +109,7 @@
         </div>
 
         <div class="description">
-          <div [froalaEditor]="options" [(froalaModel)]="post.content"></div>
+          <textarea [(ngModel)]="post.content"></textarea>
         </div>
       </div>
     </div>
