refactor: change to run electron by typescript (in progress)

--- a/projects/studio-renderer/src/components/artist-music/artist-music.component.html
+++ b/projects/studio-renderer/src/components/artist-music/artist-music.component.html
@@ -4,7 +4,7 @@
     <mat-card-header>
       <div mat-card-avatar [style.background-image]="'url(' + music.author.profile_image + ')'"></div>
       <mat-card-title class="font-weight-bold"> {{music.author.name}} </mat-card-title>
-      <mat-card-subtitle> {{music.author.area}} </mat-card-subtitle>
+      <!--<mat-card-subtitle> {{music.author.area}} </mat-card-subtitle>-->
     </mat-card-header>
 
     <div class="sheet-title mt-3 font-weight-bold">
