--- a/projects/studio-renderer/src/modules/post/pages/post-write/video/post-video-write.component.html
+++ b/projects/studio-renderer/src/modules/post/pages/post-write/video/post-video-write.component.html
@@ -8,7 +8,7 @@
         </div>
 
         <div class="description">
-          <div [froalaEditor]="options" [(froalaModel)]="post.content"></div>
+          <textarea></textarea>
         </div>
       </div>
       <div class="col px-0 border-left">
