--- a/projects/intro/src/modules/intro/components/intro-navbar/intro-navbar.component.html
+++ b/projects/intro/src/modules/intro/components/intro-navbar/intro-navbar.component.html
@@ -30,6 +30,9 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mt-sm-0 mt-3 ml-auto">
         <li class="nav-item active">
+          <a class="nav-link" href="#press">{{'intro-navbar.press' | translate}}</a>
+        </li>
+        <li class="nav-item active">
           <a class="nav-link" href="#ecosystem">{{'intro-navbar.ecosystem' | translate}}</a>
         </li>
         <li class="nav-item">
