refactor(footer): add official email

--- a/projects/intro/src/modules/intro/components/intro-footer/intro-footer.component.html
+++ b/projects/intro/src/modules/intro/components/intro-footer/intro-footer.component.html
@@ -36,7 +36,8 @@
       </div>
     </div>
     <div class="mb-5 mt-4 small text-center copyright-text">
-      © 2018 MUZIKA. All Rights Reserved
+      © 2018 MUZIKA. All Rights Reserved <BR />
+      <a href="mainto:official@muzika.network">official@muzika.network</a>
     </div>
   </div>
 </footer>
