feat(investors): add investors section

--- a/projects/intro/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/intro/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -97,6 +97,7 @@
 
 <intro-team></intro-team>
 
+<mzk-intro-investors></mzk-intro-investors>
 <mzk-intro-partners></mzk-intro-partners>
 
 <intro-advisors></intro-advisors>
